@@ -4,11 +4,13 @@ import com.kodality.commons.util.JsonUtil;
 import org.termx.terminology.terminology.codesystem.concept.ConceptService;
 import org.termx.terminology.terminology.codesystem.designation.DesignationService;
 import org.termx.terminology.terminology.codesystem.entity.CodeSystemEntityVersionRepository;
-import org.termx.ts.codesystem.ConceptSnapshot;
-import org.termx.ts.codesystem.ConceptQueryParams;
+import org.termx.ts.PublicationStatus;
 import org.termx.ts.codesystem.CodeSystemEntityVersion;
 import org.termx.ts.codesystem.CodeSystemVersionReference;
+import org.termx.ts.codesystem.CodingValueUpdateCandidate;
 import org.termx.ts.codesystem.Concept;
+import org.termx.ts.codesystem.ConceptQueryParams;
+import org.termx.ts.codesystem.ConceptSnapshot;
 import org.termx.ts.codesystem.Designation;
 import org.termx.ts.codesystem.DesignationQueryParams;
 import org.termx.ts.codesystem.EntityPropertyValue;
@@ -20,12 +22,14 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
+import org.apache.commons.lang3.tuple.Triple;
 import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
@@ -33,6 +37,7 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class EntityPropertyValueCodingEnrichmentService {
   private static final int DEFAULT_BATCH_SIZE = 100;
+  public static final int SYNC_RECALCULATE_THRESHOLD = 200;
   private final AtomicBoolean running = new AtomicBoolean(false);
 
   private final EntityPropertyValueUpdateQueueRepository queueRepository;
@@ -61,49 +66,115 @@ public class EntityPropertyValueCodingEnrichmentService {
 
   @Transactional
   protected boolean processSingleBatch(int limit) {
-    List<Pair<Long, Long>> queued = queueRepository.loadNextBatch(limit);
+    List<Triple<Long, Long, String>> queued = queueRepository.loadNextBatch(limit);
     if (queued.isEmpty()) {
       return false;
     }
     long started = System.currentTimeMillis();
-    List<Long> codeSystemEntityVersionIds = queued.stream().map(Pair::getRight).distinct().toList();
-    log.info("Coding enrichment batch started: queueItems={}, codeSystemEntityVersions={}", queued.size(), codeSystemEntityVersionIds.size());
-    enrichCodeSystemEntityVersions(codeSystemEntityVersionIds);
-    queueRepository.complete(queued.stream().map(Pair::getLeft).toList());
+    Map<String, List<Long>> grouped = queued.stream().collect(Collectors.groupingBy(
+        t -> Optional.ofNullable(t.getRight()).orElse(""),
+        Collectors.mapping(Triple::getMiddle, Collectors.toList())));
+    int totalIds = 0;
+    for (Map.Entry<String, List<Long>> entry : grouped.entrySet()) {
+      List<String> allowedStatuses = parseStatuses(entry.getKey());
+      List<Long> ids = entry.getValue().stream().distinct().toList();
+      totalIds += ids.size();
+      enrichCodeSystemEntityVersions(ids, allowedStatuses);
+    }
+    log.info("Coding enrichment batch started: queueItems={}, codeSystemEntityVersions={}", queued.size(), totalIds);
+    queueRepository.complete(queued.stream().map(Triple::getLeft).toList());
     log.info("Coding enrichment batch finished: queueItems={}, codeSystemEntityVersions={}, durationMs={}",
-        queued.size(), codeSystemEntityVersionIds.size(), System.currentTimeMillis() - started);
+        queued.size(), totalIds, System.currentTimeMillis() - started);
     return true;
   }
 
-  private void enrichCodeSystemEntityVersions(List<Long> codeSystemEntityVersionIds) {
+  @Transactional
+  public int recalculateForEntityVersion(Long csevId, List<String> allowedStatuses) {
+    return enrichCodeSystemEntityVersions(List.of(csevId), allowedStatuses);
+  }
+
+  public Map<String, Object> recalculateForCodeSystemVersion(String codeSystem, String version, List<String> allowedStatuses) {
+    List<Long> csevIds = entityPropertyValueRepository.loadCodeSystemEntityVersionIdsByCsAndVersion(codeSystem, version);
+    if (csevIds.isEmpty()) {
+      return Map.of("applied", 0);
+    }
+    if (csevIds.size() <= SYNC_RECALCULATE_THRESHOLD) {
+      int applied = enrichCodeSystemEntityVersions(csevIds, allowedStatuses);
+      return Map.of("applied", applied);
+    }
+    queueRepository.markForUpdate(csevIds, serializeStatuses(allowedStatuses));
+    return Map.of("queued", csevIds.size());
+  }
+
+  public List<CodingValueUpdateCandidate> findOutdatedCodingValuesForEntityVersion(Long csevId, List<String> allowedStatuses) {
+    return findOutdatedCodingValues(List.of(csevId), allowedStatuses);
+  }
+
+  public List<CodingValueUpdateCandidate> findOutdatedCodingValuesForCodeSystemVersion(String codeSystem, String version, List<String> allowedStatuses) {
+    List<Long> csevIds = entityPropertyValueRepository.loadCodeSystemEntityVersionIdsByCsAndVersion(codeSystem, version);
+    if (csevIds.isEmpty()) {
+      return List.of();
+    }
+    return findOutdatedCodingValues(csevIds, allowedStatuses);
+  }
+
+  private List<CodingValueUpdateCandidate> findOutdatedCodingValues(List<Long> codeSystemEntityVersionIds, List<String> allowedStatuses) {
     List<EntityPropertyValue> codingValues = entityPropertyValueRepository.loadCodingValuesByCodeSystemEntityVersionIds(codeSystemEntityVersionIds);
     if (codingValues.isEmpty()) {
-      return;
+      return List.of();
     }
+    Map<String, Map<String, Concept>> conceptsByCodeSystem = loadTargetConcepts(codingValues);
+    List<CodingValueUpdateCandidate> candidates = new ArrayList<>();
+    for (EntityPropertyValue pv : codingValues) {
+      EntityPropertyValueCodingValue cv = pv.asCodingValue();
+      if (StringUtils.isBlank(cv.getCode()) || StringUtils.isBlank(cv.getCodeSystem())) {
+        continue;
+      }
+      Concept concept = conceptsByCodeSystem.getOrDefault(cv.getCodeSystem(), Map.of()).get(cv.getCode());
+      if (concept == null) {
+        continue;
+      }
+      Pair<String, String> resolved = resolveTargetVersion(concept, allowedStatuses);
+      if (resolved == null) {
+        continue;
+      }
+      String candidateVersion = resolved.getLeft();
+      String candidateStatus = resolved.getRight();
+      if (!StringUtils.equals(cv.getVersion(), candidateVersion)) {
+        candidates.add(new CodingValueUpdateCandidate()
+            .setPropertyValueId(pv.getId())
+            .setCodeSystemEntityVersionId(pv.getCodeSystemEntityVersionId())
+            .setEntityProperty(pv.getEntityProperty())
+            .setTargetCodeSystem(cv.getCodeSystem())
+            .setTargetCode(cv.getCode())
+            .setCurrentVersion(cv.getVersion())
+            .setCandidateVersion(candidateVersion)
+            .setCandidateStatus(candidateStatus));
+      }
+    }
+    return candidates;
+  }
 
-    Map<String, List<EntityPropertyValue>> byCodeSystem = codingValues.stream()
-        .filter(pv -> StringUtils.isNotBlank(pv.asCodingValue().getCodeSystem()))
-        .collect(Collectors.groupingBy(pv -> pv.asCodingValue().getCodeSystem()));
-
-    Map<String, Map<String, Concept>> conceptsByCodeSystem = byCodeSystem.entrySet().stream()
-        .collect(Collectors.toMap(Map.Entry::getKey, e -> loadConceptsByCode(e.getKey(), e.getValue())));
+  protected int enrichCodeSystemEntityVersions(List<Long> codeSystemEntityVersionIds, List<String> allowedStatuses) {
+    List<EntityPropertyValue> codingValues = entityPropertyValueRepository.loadCodingValuesByCodeSystemEntityVersionIds(codeSystemEntityVersionIds);
+    if (codingValues.isEmpty()) {
+      return 0;
+    }
+    Map<String, Map<String, Concept>> conceptsByCodeSystem = loadTargetConcepts(codingValues);
 
     List<EntityPropertyValue> changedValues = new ArrayList<>();
-    for (Map.Entry<String, List<EntityPropertyValue>> entry : byCodeSystem.entrySet()) {
-      Map<String, Concept> conceptsByCode = conceptsByCodeSystem.getOrDefault(entry.getKey(), Map.of());
-      for (EntityPropertyValue propertyValue : entry.getValue()) {
-        EntityPropertyValueCodingValue codingValue = propertyValue.asCodingValue();
-        if (StringUtils.isBlank(codingValue.getCode())) {
-          continue;
-        }
-        Concept concept = conceptsByCode.get(codingValue.getCode());
-        if (concept == null) {
-          continue;
-        }
-        if (applyEnrichment(codingValue, concept)) {
-          propertyValue.setValue(codingValue);
-          changedValues.add(propertyValue);
-        }
+    for (EntityPropertyValue propertyValue : codingValues) {
+      EntityPropertyValueCodingValue codingValue = propertyValue.asCodingValue();
+      if (StringUtils.isBlank(codingValue.getCode()) || StringUtils.isBlank(codingValue.getCodeSystem())) {
+        continue;
+      }
+      Concept concept = conceptsByCodeSystem.getOrDefault(codingValue.getCodeSystem(), Map.of()).get(codingValue.getCode());
+      if (concept == null) {
+        continue;
+      }
+      if (applyEnrichment(codingValue, concept, allowedStatuses)) {
+        propertyValue.setValue(codingValue);
+        changedValues.add(propertyValue);
       }
     }
     if (!changedValues.isEmpty()) {
@@ -111,6 +182,15 @@ public class EntityPropertyValueCodingEnrichmentService {
       log.debug("Updated {} coding property values for {} code_system_entity_version records", changedValues.size(), codeSystemEntityVersionIds.size());
     }
     updateSnapshots(codeSystemEntityVersionIds, codingValues);
+    return changedValues.size();
+  }
+
+  private Map<String, Map<String, Concept>> loadTargetConcepts(List<EntityPropertyValue> codingValues) {
+    Map<String, List<EntityPropertyValue>> byCodeSystem = codingValues.stream()
+        .filter(pv -> StringUtils.isNotBlank(pv.asCodingValue().getCodeSystem()))
+        .collect(Collectors.groupingBy(pv -> pv.asCodingValue().getCodeSystem()));
+    return byCodeSystem.entrySet().stream()
+        .collect(Collectors.toMap(Map.Entry::getKey, e -> loadConceptsByCode(e.getKey(), e.getValue())));
   }
 
   private Map<String, Concept> loadConceptsByCode(String codeSystem, List<EntityPropertyValue> values) {
@@ -131,19 +211,15 @@ public class EntityPropertyValueCodingEnrichmentService {
         .collect(Collectors.toMap(Concept::getCode, c -> c, (left, right) -> left));
   }
 
-  private boolean applyEnrichment(EntityPropertyValueCodingValue codingValue, Concept concept) {
+  private boolean applyEnrichment(EntityPropertyValueCodingValue codingValue, Concept concept, List<String> allowedStatuses) {
     List<EntityPropertyValueCodingDesignationValue> display = concept.getLastVersion()
         .map(CodeSystemEntityVersion::getDesignations)
         .orElse(List.of())
         .stream()
         .map(this::mapDesignation)
         .toList();
-    String version = concept.getLastVersion()
-        .map(CodeSystemEntityVersion::getVersions)
-        .filter(v -> v != null && !v.isEmpty())
-        .flatMap(v -> v.stream().findFirst())
-        .map(CodeSystemVersionReference::getVersion)
-        .orElse(null);
+    Pair<String, String> resolved = resolveTargetVersion(concept, allowedStatuses);
+    String version = resolved == null ? null : resolved.getLeft();
 
     boolean changed = false;
     if (!StringUtils.equals(JsonUtil.toJson(codingValue.getDisplay()), JsonUtil.toJson(display))) {
@@ -155,6 +231,26 @@ public class EntityPropertyValueCodingEnrichmentService {
       changed = true;
     }
     return changed;
+  }
+
+  private Pair<String, String> resolveTargetVersion(Concept concept, List<String> allowedStatuses) {
+    if (allowedStatuses == null || allowedStatuses.isEmpty()) {
+      return concept.getLastVersion()
+          .map(CodeSystemEntityVersion::getVersions)
+          .filter(v -> v != null && !v.isEmpty())
+          .flatMap(v -> v.stream().findFirst())
+          .map(csv -> Pair.of(csv.getVersion(), csv.getStatus()))
+          .orElse(null);
+    }
+    return Optional.ofNullable(concept.getVersions()).orElse(List.of()).stream()
+        .filter(ev -> !PublicationStatus.retired.equals(ev.getStatus()))
+        .flatMap(ev -> Optional.ofNullable(ev.getVersions()).orElse(List.of()).stream())
+        .filter(csv -> allowedStatuses.contains(csv.getStatus()))
+        .max(Comparator
+            .comparing(CodeSystemVersionReference::getReleaseDate, Comparator.nullsFirst(Comparator.naturalOrder()))
+            .thenComparing(CodeSystemVersionReference::getVersion, Comparator.nullsFirst(Comparator.naturalOrder())))
+        .map(csv -> Pair.of(csv.getVersion(), csv.getStatus()))
+        .orElse(null);
   }
 
   private EntityPropertyValueCodingDesignationValue mapDesignation(Designation designation) {
@@ -212,5 +308,19 @@ public class EntityPropertyValueCodingEnrichmentService {
         null,
         null
     );
+  }
+
+  static String serializeStatuses(List<String> allowedStatuses) {
+    if (allowedStatuses == null || allowedStatuses.isEmpty()) {
+      return null;
+    }
+    return allowedStatuses.stream().filter(Objects::nonNull).distinct().collect(Collectors.joining(","));
+  }
+
+  static List<String> parseStatuses(String csv) {
+    if (csv == null || csv.isBlank()) {
+      return List.of();
+    }
+    return java.util.Arrays.stream(csv.split(",")).map(String::trim).filter(s -> !s.isEmpty()).toList();
   }
 }
